{Update} Crud do produto e avaliações

--- a/Codigo/atelier_picinin/src/pages/css/Products/DetalhesProduto.css
+++ b/Codigo/atelier_picinin/src/pages/css/Products/DetalhesProduto.css
@@ -23,7 +23,20 @@
 /*  Estilos estrelas avaliação  */
 .avaliacao {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+.ulavaliacao{
+    display: flex;
+}
+
+.divAvalacoes{
+    padding-top: 50px;
+    
+}
+
+.divAvaliacao{
+    padding-bottom: 15px;
 }
 
 .star-icon {
