--- a/Codigo/atelier_picinin/src/pages/css/Products/DetalhesProduto.css
+++ b/Codigo/atelier_picinin/src/pages/css/Products/DetalhesProduto.css
@@ -1,3 +1,21 @@
+.buttongroup {
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+.sabores {
+    margin-top: 20px;
+}
+
+.btncarrinho {
+    margin-top: 20px;
+}
+
+.informacoes {
+    margin-top: 50px;
+}
+
+/*  Estilos avaliação  */
 .btn-avaliar,
 .btn-enviar {
     border-radius: 10px;
@@ -17,4 +35,48 @@
     width: 100%;
     margin-top: 50px;
     margin-bottom: 50px;
+}
+
+/*  Estilos estrelas avaliação  */
+.avaliacao {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.ulavaliacao{
+    display: flex;
+}
+
+.divAvalacoes{
+    padding-top: 50px;
+    
+}
+
+.divAvaliacao{
+    padding-bottom: 15px;
+}
+
+.star-icon {
+    font-size: 50px;
+    width: 50px;
+    list-style-type: none;
+    border: 1px solid #fff;
+    cursor: pointer;
+    color: #ffe500;
+}
+
+.star-icon::before {
+    content: "\2605";
+}
+
+.star-icon.ativo~.star-icon::before {
+    content: "\2606";
+}
+
+.avaliacao:hover .star-icon::before {
+    content: "\2605";
+}
+
+.star-icon:hover~.star-icon::before {
+    content: "\2606";
 }
