--- a/Codigo/atelier_picinin/src/components/css_components/layout/Button.module.css
+++ b/Codigo/atelier_picinin/src/components/css_components/layout/Button.module.css
@@ -133,6 +133,20 @@
     width: 100%;
 }
 
+.btnLogin {
+    background-color: var(--pastel-red);
+    color: white;
+    height: 2rem;
+    margin-top: 20px;
+    border-radius: 5px;
+    box-shadow: var(--box-shadow);
+}
+
+.btnLink {
+    background: none;
+    color: var(--btn-azul);
+}
+
 @media (max-width: 900px) {
     .btnDropdown {
         height: 35px;
