[Update] Correção e mudança de muitas coisas

--- a/Codigo/atelier_picinin/src/App.css
+++ b/Codigo/atelier_picinin/src/App.css
@@ -31,6 +31,7 @@ body, html {
 .App > div {
     padding: 100px 0;
     width: 100%;
+    min-height: calc(100vh - 78px);
 }
 
 @media (max-width: 600px) {
