--- a/Codigo/atelier_picinin/src/pages/css/cadastrarUsuario/cadastrarUsuario.module.css
+++ b/Codigo/atelier_picinin/src/pages/css/cadastrarUsuario/cadastrarUsuario.module.css
@@ -11,6 +11,18 @@ input{
 }
 .campos{
     display: flex;
-    background-color: red;
     padding-bottom: 50px;
+}
+
+.cadastrar{
+    border: none;
+    background-color: rgb(0, 255, 13) !important;
+    border-radius: 20px;
+    padding: 5px 15px;
+    color: white;
+    transition: all .2s;
+}
+.teste{
+    display: flex !important;
+    justify-content: center !important;
 }
