[Update] Criação do sistema de autenticação do login

--- a/Codigo/atelier_picinin/src/App.css
+++ b/Codigo/atelier_picinin/src/App.css
@@ -28,7 +28,7 @@ body, html {
     min-height: 100vh;
 }
 
-.App > div {
+.App > div:not(:first-child) {
     padding: 100px 0;
     width: 100%;
     min-height: calc(100vh - 78px);
