[Fix] Correção da mudança do menu quando usuário logado

--- a/Codigo/atelier_picinin/src/pages/css/Products/DetalhesProduto.css
+++ b/Codigo/atelier_picinin/src/pages/css/Products/DetalhesProduto.css
@@ -8,7 +8,7 @@
 }
 
 div.body-detalhes-produto {
-    padding: 0 4rem;
+    padding: 50px 4rem !important;
     display: flex;
     flex-direction: column;
     row-gap: 5rem;
