--- a/Codigo/atelier_picinin/src/components/css_components/avaliacao.css
+++ b/Codigo/atelier_picinin/src/components/css_components/avaliacao.css
@@ -7,12 +7,13 @@ div.flex {
     display: flex;
     flex-direction: column;
     border-bottom: .1rem solid var(--light-gray);
+    padding: 10px;
 }
 
 p.avaliador {
     margin: 0;
     font-size: 1.2rem;
-    font-weight: 500;
+    font-weight: 700;
 }
 
 p.comentario {
@@ -29,7 +30,12 @@ ul.estrelas .star {
     list-style-type: none;
 }
 
-ul.estrelas .star svg{
-    font-size: 1.5rem;
+ul.estrelas .star svg {
+    font-size: 1.2rem;
     color: var(--yellow-star);
+}
+
+.dataComentario {
+    margin-top: 10px;
+    opacity: 60%;
 }
