--- a/Codigo/atelier_picinin/src/pages/css/home/Home.css
+++ b/Codigo/atelier_picinin/src/pages/css/home/Home.css
@@ -10,7 +10,9 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
-    background-color: #D9D9D9;
+    background-color: #ff6961;
+    height: 350px;
+    color: black;
 }
 
 .banner h2 {
@@ -44,6 +46,7 @@
     display: flex;
     flex-direction: column;
     width: 50%;
+    height: 350px;
 }
 
 .img {
@@ -52,7 +55,14 @@
     flex-wrap: wrap;
     align-items: center;
     width: 50%;
+    height: 350px;
     background-color: #af8b8b81;
+}
+
+.img-doce {
+    object-fit: cover;
+    width: 100%;
+    height: 350px;
 }
 
 /* Fim estilos Banner */
