--- a/Codigo/atelier_picinin/src/App.css
+++ b/Codigo/atelier_picinin/src/App.css
@@ -15,9 +15,7 @@ a, a:hover {
 }
 
 body, html {
-    max-width: 2000px;
     display: block !important;
-    font-weight: 500;
 }
 
 .App {
@@ -26,6 +24,8 @@ body, html {
     align-items: center;
     flex-direction: column;
     min-height: 100vh;
+    width: 100%;
+    max-width: 120rem;
 }
 
 .App > div:not(:first-child) {
