--- a/Codigo/atelier_picinin/src/components/css_components/layout/Rodape.module.css
+++ b/Codigo/atelier_picinin/src/components/css_components/layout/Rodape.module.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #D9D9D9;
+    background-color: #ff6961;
     margin: auto 0 0 !important;
     width: 100%;
     height: 100px;
