--- a/Codigo/atelier_picinin/src/components/layout/css/Header.css
+++ b/Codigo/atelier_picinin/src/components/layout/css/Header.css
@@ -83,4 +83,20 @@
     cursor: pointer;
 }
 
+.cadastrarUnlogged,
+.loginUnlogged {
+    font-size: 16px !important;
+}
+
+
 /**** Fim estilos cabeçalho ****/
+
+@media screen and (max-width: 720px) {
+    .home {
+        display: none;
+    }
+
+    .contatos {
+        display: none;
+    }
+}
