--- a/Codigo/atelier_picinin/src/components/layout/css/Header.css
+++ b/Codigo/atelier_picinin/src/components/layout/css/Header.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    align-items: center;
     padding: 20px 35px;
     width: 100%;
     text-decoration: none;
@@ -51,7 +52,7 @@
 }
 
 .logo {
-    width: 120px;
+    width: 3rem;
     transition: 0.5s;
 }
 
@@ -64,7 +65,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 30px;
+    column-gap: 30px;
+    margin: 0 !important;
 }
 
 .buttons>a {
@@ -86,6 +88,10 @@
 .cadastrarUnlogged,
 .loginUnlogged {
     font-size: 16px !important;
+}
+
+span.logout {
+    cursor: pointer;
 }
 
 
