--- a/Codigo/atelier_picinin/src/App.css
+++ b/Codigo/atelier_picinin/src/App.css
@@ -16,6 +16,7 @@ a, a:hover {
 
 body, html {
     display: block !important;
+    overflow: hidden;
 }
 
 .App {
@@ -25,7 +26,7 @@ body, html {
     flex-direction: column;
     min-height: 100vh;
     width: 100%;
-    max-width: 120rem;
+    max-width: 120rem;    
 }
 
 .App > div:not(:first-child) {
