--- a/Codigo/atelier_picinin/src/components/cart/css/CartItem.module.css
+++ b/Codigo/atelier_picinin/src/components/cart/css/CartItem.module.css
@@ -65,8 +65,6 @@ div.divSabores .sabores {
     color: var(--gray);
 }
 
-
-
 div.manipulationPrice {
     display: flex;
     align-items: center;
@@ -74,14 +72,30 @@ div.manipulationPrice {
     width: 16rem;
 }
 
-div.manipulationPrice span.quantity {
+div.manipulationPrice span.quantity_no_editable {
     width: 7rem;
-}
-
-div.manipulationPrice span.totalPrice {
-
 }
 
 div.manipulationPrice span {
     font-size: .9rem;
+}
+
+div.quantityManipulation {
+    background-color: var(--light-bege);
+    border-radius: 30px;
+    padding: 0 5px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 70px;
+}
+
+div.quantityManipulation button {
+    background: none;
+    border: none;
+    padding: 0;
+}
+
+.remove-button {
+    cursor: pointer;
 }
