--- a/Codigo/atelier_picinin/src/pages/css/perfil/PerfilUsuario.css
+++ b/Codigo/atelier_picinin/src/pages/css/perfil/PerfilUsuario.css
@@ -55,6 +55,7 @@
 .dropPerfilButton {
     border-radius: 15px !important;
     margin-bottom: 30px !important;
+    height: 100px !important;
     box-shadow: none !important;
     border: 1px solid rgb(236, 223, 223) !important;
 }
@@ -65,4 +66,30 @@
 
 .meusPedidosh2 {
     margin-bottom: 50px;
+}
+
+.spanOrder {
+    background-color: #ece5e5;
+    color: black;
+    padding: 2.5px;
+    border-radius: 50px;
+}
+
+.buttonCancelarPedido {
+    border: none;
+    background-color: var(--pastel-red);
+    border-radius: 20px;
+    padding: 5px 10px;
+    width: 100px;
+    margin-left: 10px;
+    color: white;
+    transition: all .2s;
+}
+
+.divButtonCancelarPedido {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
 }
