--- a/Codigo/atelier_picinin/src/pages/css/visualizarPedidos/visualizarPedidos.css
+++ b/Codigo/atelier_picinin/src/pages/css/visualizarPedidos/visualizarPedidos.css
@@ -20,6 +20,45 @@
 .body{
     overflow-y: visible !important;
 }
+
+span.status-3 {
+    text-align: center;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: rgb(255, 0, 0);
+    background-color: rgb(255, 204, 204);
+    padding: 3px 10px;
+    border-radius: 5px;
+}
+
+span.status-2 {
+    text-align: center;
+    color: rgb(0, 255, 34);
+    background-color: rgb(219, 252, 218);
+    padding: 3px 10px;
+    border-radius: 5px;
+}
+
+span.status-1 {
+    text-align: center;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: rgb(162, 0, 255);
+    background-color: rgb(240, 213, 255);
+    padding: 3px 10px;
+    border-radius: 5px;
+}
+
+span.status-0 {
+    text-align: center;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: rgb(255, 217, 0);
+    background-color: rgb(255, 252, 218);
+    padding: 3px 10px;
+    border-radius: 5px;
+}
+
 @media screen and (max-width: 600px) {
     th{
         font-size:x-small;
@@ -33,7 +72,7 @@
     span{
         font-size: x-small;
     }
-  }
+}
 
 
 
