--- a/Codigo/atelier_picinin/src/pages/css/visualizarPedidos/visualizarPedidos.css
+++ b/Codigo/atelier_picinin/src/pages/css/visualizarPedidos/visualizarPedidos.css
@@ -8,9 +8,31 @@
     --box-shadow: 1px 1px 5px rgba(0, 0, 0, .2);
 }
 
-.divTabela{
-    max-width: 60%;
+.divTabela {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+    margin: 0 auto;
+    max-width: 60rem;
+    width: 100%;   
 }
+
+.titleButton {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    flex-wrap: wrap;
+}
+
+h1.pedidos-title {
+    font-size: 25px;
+    text-align: left;
+    width: 50%;
+}
+
 .carrinho{
     background-color: white;
 }
