--- a/Codigo/atelier_picinin/src/components/css_components/layout/Button.module.css
+++ b/Codigo/atelier_picinin/src/components/css_components/layout/Button.module.css
@@ -5,7 +5,7 @@
     --gray: #808080;
     --light-gray: #f7f7f7;
     --pastel-red: #ff6961;
-    --box-shadow: 1px 1px 5px rgba(0, 0, 0, .2);
+    --box-shadow: 1px 1px 10px 20px rgba(0, 0, 0, .2);
 }
 
 .btnAvaliar {
@@ -119,6 +119,7 @@
     justify-content: space-between;
     align-items: center;
     box-shadow: var(--box-shadow);
+    background-color: var(--light-gray);
 }
 
 .dropdown_collapseElement em {
@@ -182,6 +183,23 @@
 .btnLink {
     background: none;
     color: var(--btn-azul);
+}
+
+.btnCancelarPedido {
+    border: none;
+    background-color: var(--pastel-red);
+    border-radius: 100%;
+    height: 35px;
+    width: 35px;
+    padding: 0 1rem;
+    color: white;
+    transition: all .2s;
+}
+
+.btnCancelarPedido:hover {
+    color: var(--pastel-red);
+    background-color: white;
+    box-shadow: var(--box-shadow);
 }
 
 @media (max-width: 900px) {
