--- a/Codigo/atelier_picinin/src/components/pedidos/css/itensPedido.module.css
+++ b/Codigo/atelier_picinin/src/components/pedidos/css/itensPedido.module.css
@@ -10,6 +10,11 @@
     padding: 2rem 0;
 }
 
+.entrega {
+    display: flex;
+    flex-direction: column;
+}
+
 .enderecoEntrega {
     display: flex;
     column-gap: 1rem;
@@ -38,8 +43,4 @@
 
 .gratis {
     color: #12E400;
-}
-
-.itensCarrinho {
-    
 }
