--- a/Codigo/atelier_picinin/src/pages/css/Products/DetalhesProduto.css
+++ b/Codigo/atelier_picinin/src/pages/css/Products/DetalhesProduto.css
@@ -34,17 +34,11 @@ div.infos-produto h1 {
     margin: 0;
 }
 
-div.spans-infos {
-    display: flex;
-    flex-direction: column;
-    row-gap: .5rem;
-}
-
 div.span-review {
     display: flex;
     align-items: baseline;
-    justify-content: space-between;
-    width: 9rem;
+    justify-content: flex-start;
+    column-gap: .5em;
 }
 
 div.preco-produto {
@@ -53,12 +47,12 @@ div.preco-produto {
     column-gap: 1rem;
 }
 
-span.preco-produto {
+span.preco-produtoTotal {
     font-weight: 600;
     font-size: 2.5rem;
 }
 
-div.preco-produto span:last-child {
+span.aPartirDe {
     font-size: .9rem;
 }
 
