--- a/Codigo/atelier_picinin/src/components/css_components/Form.module.css
+++ b/Codigo/atelier_picinin/src/components/css_components/Form.module.css
@@ -2,7 +2,8 @@ form.form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start;
+    row-gap: 1rem;
     width: 100%;
     height: 500px;
 }
